--- a/Scripts/Score/UI_Config.json
+++ b/Scripts/Score/UI_Config.json
@@ -40,17 +40,31 @@
     "PermissionOnGet": {
         "type": "dropdown",
         "value": "everyone",
-        "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
+        "items": ["everyone", "subscriber", "user_specific", "moderator", "editor"],
         "label": "Permission On Get Command",
         "tooltip": "Who is able to use the script command to get score.",
+        "group": "Permission"
+    },
+    "PermissionInfoOnGet": {
+        "type": "textbox",
+        "value": "",
+        "label": "Info For Get",
+        "tooltip": "This field should only be filled when using the user_specific permission on Get Command.",
         "group": "Permission"
     },
     "PermissionOnEdit": {
         "type": "dropdown",
         "value": "moderator",
-        "items": ["everyone", "moderator", "subscriber", "user_specific", "editor"],
-        "label": "Permission On New/Update/Reset Commands",
-        "tooltip": "Who is able to use the script commands to create/update/reset score.",
+        "items": ["everyone", "subscriber", "user_specific", "moderator", "editor"],
+        "label": "Permission On Edit Commands",
+        "tooltip": "Who is able to use the script commands to edit score.",
+        "group": "Permission"
+    },
+    "PermissionInfoOnEdit": {
+        "type": "textbox",
+        "value": "",
+        "label": "Info for Edit Commands",
+        "tooltip": "This field should only be filled when using the user_specific permission on Edit Commands.",
         "group": "Permission"
     },
     "PermissionDeniedMessage": {
@@ -58,13 +72,6 @@
         "value": "Permission denied: You have to be a {0} to use {1} command!",
         "label": "Permission Denied Message",
         "tooltip": "Chat message will be sent on failed permission check. 0 — required permission, 1 — command.",
-        "group": "Permission"
-    },
-    "PermissionInfo": {
-        "type": "textbox",
-        "value": "",
-        "label": "Info",
-        "tooltip": "This field should only be filled when using the user_specific permission.",
         "group": "Permission"
     },
 
