--- a/Scripts/TransferCurrency/UI_Config.json
+++ b/Scripts/TransferCurrency/UI_Config.json
@@ -8,11 +8,31 @@
         "tooltip": "Command that users will use when they want to transfer currency.",
         "group": "Setup"
     },
+    "CommandGiveCooldown": {
+        "type": "slider",
+        "value": 1,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Give Command Cooldown (seconds)",
+        "tooltip": "How long the Give command should go on cooldown for.",
+        "group": "Setup"
+    },
     "CommandAdd": {
         "type": "textbox",
         "value": "!add",
         "label": "Add Command",
         "tooltip": "Command that (typically) moderators will use when they want to add currency.",
+        "group": "Setup"
+    },
+    "CommandAddCooldown": {
+        "type": "slider",
+        "value": 1,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Add Command Cooldown (seconds)",
+        "tooltip": "How long the Add command should go on cooldown for.",
         "group": "Setup"
     },
     "CommandRemove": {
@@ -22,6 +42,16 @@
         "tooltip": "Command that (typically) moderators will use when they want to remove currency.",
         "group": "Setup"
     },
+    "CommandRemoveCooldown": {
+        "type": "slider",
+        "value": 1,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Remove Cooldown (seconds)",
+        "tooltip": "How long the Remove command should go on cooldown for.",
+        "group": "Setup"
+    },
     "CommandSet": {
         "type": "textbox",
         "value": "!set",
@@ -29,11 +59,31 @@
         "tooltip": "Command that (typically) moderators will use when they want to set currency value to certain amount.",
         "group": "Setup"
     },
+    "CommandSetCooldown": {
+        "type": "slider",
+        "value": 1,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Set Command Cooldown (seconds)",
+        "tooltip": "How long the Set command should go on cooldown for.",
+        "group": "Setup"
+    },
     "CommandGetTax": {
         "type": "textbox",
         "value": "!get_tax",
         "label": "Get Tax Command",
         "tooltip": "Command that users will use when they want to to retrieve current tax percent.",
+        "group": "Setup"
+    },
+    "CommandGetTaxCooldown": {
+        "type": "slider",
+        "value": 1,
+        "min": 1,
+        "max": 100,
+        "ticks": 1,
+        "label": "Get Tax Command Cooldown (seconds)",
+        "tooltip": "How long the Get Tax command should go on cooldown for.",
         "group": "Setup"
     },
     "ParameterAll": {
@@ -209,6 +259,13 @@
         "value": "Current tax: {0}%",
         "label": "Current Tax Percent Message",
         "tooltip": "Chat message will be sent if user retrieves current tax percent. 0 — current tax percent.",
+        "group": "Chat Messages"
+    },
+    "TimeRemainingMessage": {
+        "type": "textbox",
+        "value": "Command {0} is on cooldown. Time remaining: {1} (seconds).",
+        "label": "Time Remaining Message",
+        "tooltip": "Chat message will be sent if user tries to call command which is on cooldown now. 0 — command which is on cooldown, 1 — time remaining.",
         "group": "Chat Messages"
     },
 
