--- a/Scripts/Template/UI_Config.json
+++ b/Scripts/Template/UI_Config.json
@@ -19,7 +19,7 @@
         "group": "Setup"
     },
 
-    "Permission": {
+    "PermissionOnPing": {
         "type": "dropdown",
         "value": "everyone",
         "items": ["everyone", "subscriber", "user_specific", "moderator", "editor"],
@@ -27,18 +27,18 @@
         "tooltip": "Who is able to use the script commands.",
         "group": "Permission"
     },
+    "PermissionInfoOnPing": {
+        "type": "textbox",
+        "value": "",
+        "label": "Info",
+        "tooltip": "This field should only be filled when using the user_specific permission.",
+        "group": "Permission"
+    },
     "PermissionDeniedMessage": {
         "type": "textbox",
         "value": "Permission denied: You have to be a {0} to use {1} command!",
         "label": "Permission Denied Message",
         "tooltip": "Chat message will be sent on failed permission check. 0 — required permission, 1 — command.",
-        "group": "Permission"
-    },
-    "PermissionInfo": {
-        "type": "textbox",
-        "value": "",
-        "label": "Info",
-        "tooltip": "This field should only be filled when using the user_specific permission.",
         "group": "Permission"
     },
 
